[gd_scene load_steps=2 format=3 uid="uid://beipc3byq6y5w"]

[ext_resource type="Script" path="res://scripts/ai/enemy-ai/enemy_ai.gd" id="1_at6rc"]

[node name="EnemyAI" type="Node2D"]
script = ExtResource("1_at6rc")
initial_chase_speed = null
scatter_speed = null
eaten_speed = null
frightened_speed = null
frightened_sound_file_path = "res://assets/audio/enemy_frightened.wav"
eaten_sound_file_path = "res://assets/audio/enemy_eaten.wav"
enemy_going_home_sound_file_path = "res://assets/audio/enemy_going_home.wav"
initial_state = null
scatter_points_node_name = null

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
radius = 13.0
debug_enabled = true

[node name="PathfindingUpdateTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="PathfindingUpdateTimer" to="." method="_on_pathfinding_update_timer_timeout"]
